--- a/index.html
+++ b/index.html
@@ -1,1 +1,102 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Youtee Mathematics Practice for Kids</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 40px;
+            background-color: #f0f2f5;
+        }
+
+        .container {
+            background: white;
+            padding: 2rem;
+            border-radius: 12px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            width: 100%;
+            max-width: 600px;
+            text-align: center;
+        }
+
+        input {
+            width: 80%;
+            padding: 12px;
+            border: 2px solid #ddd;
+            border-radius: 6px;
+            margin-bottom: 15px;
+            outline: none;
+        }
+
+        input:focus {
+            border-color: #ff0000;
+        }
+
+        button {
+            padding: 12px 24px;
+            background-color: #ff0000;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background 0.3s;
+        }
+
+        button:hover {
+            background-color: #cc0000;
+        }
+
+        #videoContainer {
+            margin-top: 30px;
+            width: 100%;
+        }
+
+        iframe {
+            width: 100%;
+            aspect-ratio: 16 / 9;
+            border-radius: 8px;
+            border: none;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+        }
+    </style>
+</head>
+<body>
+
+    <div class="container">
+        <h2>Youtee Maths</h2>
+        <input type="text" id="urlInput" placeholder="Search Maths">
+        <br>
+        <button onclick="embedVideo()">Search maths</button>
+
+        <div id="videoContainer">
+            </div>
+    </div>
+
+    <script>
+        function embedVideo() {
+            const url = document.getElementById('urlInput').value;
+            const container = document.getElementById('videoContainer');
+            
+            const regExp = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
+            const match = url.match(regExp);
+
+            const videoId = (match && match[2].length === 11) ? match[2] : null;
+
+            if (videoId) {
+                container.innerHTML = `
+                    <iframe width="1120" height="630" src="https://www.youtube.com/embed/${videoId}?si=537" title="Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>`;
+            } else {
+                alert("Something went wrong!");
+            }
+        }
+    </script>
+
+</body>
+</html>
