--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
             const regExp = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/;
             const match = url.match(regExp);
 
-            const videoId = (match && match[2].length === 11) ? match[2] : null;
-
+            let videoId = (match && match[2].length === 11) ? match[2] : null;
+            if (!videoId){
+                videoId = url
+            }
             if (videoId) {
                 container.innerHTML = `
                     <iframe width="1120" height="630" src="https://www.youtube.com/embed/${videoId}?si=537" title="Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>`;
