--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Youtee Mathematics Practice for Kids</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: 'Helvetica', Tahoma, Geneva, Verdana, sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -69,7 +69,7 @@
         footer {
             position: absolute;
             bottom: 0;
-            font-size: 2;
+            font-size: 6;
             padding-bottom: 0.25%;
             color:#f0f2f5;
         }
@@ -88,13 +88,13 @@
     <div id="videoContainer">
     </div>
     <footer>
-        ??HwAPLk_sQ3w
-        4ofJpOEXrZs
-        bKjfw77cxeQ
-        Q9KWcWKo2T8
-        L4p2gN2CzsA
-        mOvhHim78YA
-        oaOG1xOk7XY??
+        ??[1]HwAPLk_sQ3w
+        [2]4ofJpOEXrZs
+        [3]bKjfw77cxeQ
+        [4]Q9KWcWKo2T8
+        [5]L4p2gN2CzsA
+        [6]mOvhHim78YA
+        [7]oaOG1xOk7XY??
     </footer>
     <script>
         function embedVideo() {
