--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtee Mathematics Practice for Kids</title>
+    <title>Glow - App Library</title>
+    <link rel="icon" type="image/x-icon" href="https://www.rmunify.com/Content/Assets/Signin/Glow/favicon2.ico">
     <style>
         body {
             font-family: 'Helvetica', Tahoma, Geneva, Verdana, sans-serif;
