nvm it was Launch Pad

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glow - App Library</title>
+    <title>Glow - Launch Pad</title>
     <link rel="icon" type="image/x-icon" href="https://www.rmunify.com/Content/Assets/Signin/Glow/favicon2.ico">
     <style>
         body {
