--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glow - Launch Pad</title>
-    <link rel="icon" type="image/x-icon" href="https://www.rmunify.com/Content/Assets/Signin/Glow/favicon2.ico">
+    <title>Google</title>
+    <link rel="icon" type="image/x-icon" href="https://www.gstatic.com/images/branding/searchlogo/ico/favicon.ico">
     <style>
         body {
             font-family: 'Helvetica', Tahoma, Geneva, Verdana, sans-serif;
@@ -69,9 +69,9 @@
 
         footer {
             position: absolute;
-            bottom: 0;
-            font-size: 6;
-            padding-bottom: 0.25%;
+            top: 0;
+            right: 0;
+            font-size: 8;
             color:#f0f2f5;
         }
     </style>
