--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                 videoId = url
             }
             if (videoId) {
+                $("h1").innerHTML = "Heyo"
                 container.innerHTML = `
                     <iframe width="1120" height="630" src="https://www.youtube.com/embed/${videoId}?si=537" title="Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>`;
             } else {
