--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
 
     <div class="container">
-        <h2>Youtee Maths</h2>
+        <h2 id="Title">Youtee Maths</h2>
         <input type="text" id="urlInput" placeholder="Search Maths">
         <br>
         <button onclick="embedVideo()">Search maths</button>
@@ -110,7 +110,8 @@
                 videoId = url
             }
             if (videoId) {
-                $("h1").innerHTML = "Heyo"
+                document.getElementById("Title").innerHTML = "Heyo"
+                document.getElementById("Title").innerHTML = ""
                 container.innerHTML = `
                     <iframe width="1120" height="630" src="https://www.youtube.com/embed/${videoId}?si=537" title="Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>`;
             } else {
